--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,11 +1,14 @@
 name: pdf_viewer_plugin_example
 description: Demonstrates how to use the pdf_viewer_plugin plugin.
 
+environment:
+  sdk: '>=2.12.0 <3.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
 
-  path_provider: ^1.6.24
+  path_provider: any
   http: any
 
 dev_dependencies:
