--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,5 +22,4 @@ flutter:
         pluginClass: PdfViewerPlugin
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.6 <2.0.0" 
+  sdk: '>=2.12.0 <3.0.0'
